implement hw8